--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 <footer>
     <div class="container text-center">
         <h2 class="mb-3 text-white">Mouparna Dhar</h2>
-        <p class="lead fw-light mb-4 text-white">Energy Intelligence & Geospatial Data Scientist</p>
+        <p class="lead fw-light mb-4 text-white">Climate Risk Analyst & Geospatial Data Scientist</p>
         <div class="mb-5">
             <a href="mailto:mouparnadhar2330@gmail.com" class="btn btn-outline-light rounded-pill px-4 mx-2">Email Me</a>
             <a href="https://www.linkedin.com/in/mouparnadharesg" target="_blank" class="btn btn-outline-light rounded-pill px-4 mx-2">LinkedIn</a>
@@ -172,4 +172,5 @@
 </footer>
 
 </body>
+
 </html>
