--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         .viz-box { background: var(--bg-light); padding: 30px; border-radius: 20px; margin-bottom: 40px; border: 1px solid #e2e8f0; }
         .img-fluid { border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
 
-        /* FELT EMBED */
+        /* MAP EMBED */
         .felt-container { border-radius: 20px; overflow: hidden; border: 5px solid white; box-shadow: 0 20px 40px rgba(0,0,0,0.15); margin: 40px 0; }
         
         .btn-main { background: var(--accent); color: white; padding: 15px 35px; border-radius: 50px; font-weight: 700; text-decoration: none; transition: 0.3s; display: inline-block; }
@@ -105,13 +105,13 @@
         </div>
     </div>
 
-    <!-- FELT MAP -->
+    <!-- NEW KEPLER MAP -->
     <div id="dashboard">
         <h2 class="section-header">1. Live Asset-Level Risk Dashboard</h2>
         <div class="felt-container">
-            <!-- UPDATED EMBED LINK -->
+            <!-- REPLACED FELT LINK WITH YOUR KEPLER HTML FILE -->
             <iframe 
-                src="https://felt.com/embed/map/DUBAI-Stranded-Asset-Coastal-Risk-Tool-Project-copy-M0BwgaL7T79BVUFIvCFNOQA?loc=25.1104,55.15348,13.06z" 
+                src="interactive-map.html" 
                 width="100%" 
                 height="650" 
                 frameborder="0">
@@ -172,6 +172,4 @@
 </footer>
 
 </body>
-
 </html>
-
